--- a/week 1/portfolio-project/style.css
+++ b/week 1/portfolio-project/style.css
@@ -43,7 +43,36 @@ ul {
     border-radius: 50%;
 }
 
+.rel-pos {
+    position: relative;
+}
+
+
+
 .work-item {
     font-size: 4.5rem;
     margin: 0;
 }
+
+.img-block {
+    width: 800px;
+    position: absolute;
+    top: 0;
+    left: 10%;
+    z-index: -1;
+
+}
+
+@media screen and (max-width: 990px) {
+    .img-block {
+        width: 500px; 
+        left: 40%;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .img-block {
+        display: none;
+    }
+}
+
