--- a/week 2/style.css
+++ b/week 2/style.css
@@ -42,12 +42,25 @@ body {
     border-radius: 5px;
 }
 
-input[type="text"] {
-    padding: 0.5rem 1rem;
-    width: calc(100% - 2rem);
+.input-container {
     margin-bottom: 0.5rem;
     border: 1px solid #a9a9a9;
     border-radius: 5px;
+    padding: 0.5rem;
+    width: calc(100% - 1rem);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px;
+}
+
+input[type="text"] {
+    border: 0;
+    /* padding: 0.5rem 1rem;
+    width: calc(100% - 2rem);
+    margin-bottom: 0.5rem;
+    border: 1px solid #a9a9a9;
+    border-radius: 5px; */
 }
 
 input::placeholder {
