--- a/week 2/style.css
+++ b/week 2/style.css
@@ -42,6 +42,17 @@ body {
     border-radius: 5px;
 }
 
+@media screen and (min-width: 1024px) {
+    .container {
+        transform: scale(1.5);
+    }
+}
+@media screen and (min-width: 2560px) {
+    .container {
+        transform: scale(3);
+    }
+}
+
 .input-container {
     margin-bottom: 0.5rem;
     border: 1px solid #a9a9a9;
