--- a/week 3/style.css
+++ b/week 3/style.css
@@ -23,7 +23,6 @@ body {
     position: relative;
     background-color: var(--container-color);
     padding: 1rem 3rem;
-    height: 100vh;
 }
 
 h1 {
@@ -50,21 +49,21 @@ h1 > span {
 
 .write-box {
     margin-bottom: 1rem;
-    min-height: 150px;
 }
 
-.write-box > input {
+.write-box > textarea {
     background-color: inherit;
     color: inherit;
     border: 0;
     text-align: start;
     width: calc(100% - 2rem);
+    min-height: 100px;
     padding: 1rem;
     border-radius: 15px;
     font: inherit;
 }
 
-.write-box>input:focus {
+.write-box>textarea:focus {
     outline: 0;
 }
 
@@ -78,6 +77,18 @@ h1 > span {
 .sub-check{
     display: flex;
     justify-content: space-around;
+}
+
+@media screen and (max-width: 550px) {
+    .sub-check {
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
+
+    .check-box {
+        gap: 0;
+    }
 }
 
 .count-box {
