--- a/week 3/style.css
+++ b/week 3/style.css
@@ -6,6 +6,7 @@
 :root {
     --container-color: #151515;
     --sub-box-color: #222222;
+    --font-color: white;
     font-size: 14px;
     font-weight: 100;
     font-family: "Open Sans", sans-serif;
@@ -14,7 +15,7 @@
 
 body {
     background-color: #0e0e0e;
-    color: white;
+    color: var(--font-color);
     text-align: center;
     padding: 0 5rem;
 }
@@ -104,4 +105,49 @@ h1 > span {
     position: absolute;
     top: 10px;
     right: 10px;
+}
+
+.theme-settings > button {
+    border: 0;
+    background: transparent;
+    color: var(--font-color);
+    cursor: pointer;
+}
+
+.theme-box {
+    position: absolute;
+    min-width: 500px;
+    top: 10px;
+    right: 10px;
+    background-color: var(--sub-box-color);
+    border: 5px solid black;
+    border-radius: 15px;
+    text-align: left;
+    padding: 1rem;  
+}
+
+.theme-box > div {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 1rem;
+}
+
+.theme-box > div > div {
+    display: flex;
+    align-items: center;
+    gap: 10px; 
+}
+
+.theme-box > button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: 0;
+    background: transparent;
+    color: var(--font-color);
+}
+
+.hidden {
+    display: none;
 }
