--- a/week 3/style.css
+++ b/week 3/style.css
@@ -116,7 +116,7 @@ h1 > span {
 
 .theme-box {
     position: absolute;
-    min-width: 500px;
+    min-width: 5rem;
     top: 10px;
     right: 10px;
     background-color: var(--sub-box-color);
