--- a/Month 2/week 2/youtube_clone_project/src/index.css
+++ b/Month 2/week 2/youtube_clone_project/src/index.css
@@ -26,7 +26,7 @@ a {
 }
 
 .category-btn:hover {
-  background-color: #FC1503 !important;
+  background-color: #fc6406 !important;
   color: white !important;
 }
 
@@ -35,7 +35,7 @@ a {
 }
 
 .react-player {
-  height: 77vh !important;
+  height: 65vh !important;
   width: 100% !important;
 }
 
